package models;

/**
 * Interfaz que representa el estado de la máquina.
 */
public interface State {
    void insertarDinero();
    void dispensarProducto();
}